feat: use etcd. watch update apisix upstream

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,17 +53,14 @@ services:
     ports:
       - "7379:6379"
 
-  consul:
-    image: docker.io/bitnami/consul:1
-    volumes:
-      - consul_data:/bitnami/consul
+  etcd:
+    image: bitnami/etcd
+    restart: always
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+      - ETCD_ADVERTISE_CLIENT_URLS=http://etcd:2379
     ports:
-      - '9300:8300'
-      - '9301:8301'
-      - '9301:8301/udp'
-      - '9500:8500'
-      - '9600:8600'
-      - '9600:8600/udp'
+      - "3379:2379"
 
   dtm:
     image: yedf/dtm:latest
