--- a/quickstart/configs/config.yaml
+++ b/quickstart/configs/config.yaml
@@ -6,6 +6,10 @@ services:
   registry:
     type: etcd
     endpoint: http://etcd:2379
+  services:
+    user:
+    sys:
+    saas:
 
 data:
   endpoints:
