fix: downgrade fallback priority

--- a/quickstart/configs/sys.yaml
+++ b/quickstart/configs/sys.yaml
@@ -76,9 +76,11 @@ sys:
         upstream_id: sys-http
 
       user-api:
+        priority: -99
         uris: ["/v1/*","/assets/user/*"]
         upstream_id: user-http
 
       web:
+        priority: -100
         uri: /*
         upstream_id: web
