--- a/sys/private/biz/seed/menu.yaml
+++ b/sys/private/biz/seed/menu.yaml
@@ -1,100 +1,18 @@
 menus:
-  - name: "dev"
-    path: "/dev"
-    component: "LAYOUT"
-    redirect: "/dev/jaeger"
-    title: "dev.title"
-    icon: "ion:grid-outline"
-    meta:
-    priority: 1000
-    requirement:
-      - namespace: "dev"
-        resource: "*"
-        action: "*"
-    children:
-      - name: "docs"
-        icon: "ant-design:api-outlined"
-        path: "/dev/docs"
-        component: "IFRAME"
-        iframe: "/swagger"
-        title: "dev.docs"
-        is_preserved: true
-        requirement:
-          - namespace: "dev.docs"
-            resource: "*"
-            action: "*"
-      - name: "tracing"
-        icon: "ant-design:eye-outlined"
-        path: "/dev/jaeger"
-        component: "IFRAME"
-        is_preserved: true
-        iframe: "/jaeger"
-        title: "dev.jaeger"
-        requirement:
-          - namespace: "dev.jaeger"
-            resource: "*"
-            action: "*"
-      - name: "jobs"
-        icon: "ant-design:eye-outlined"
-        path: "/dev/jobs"
-        component: "IFRAME"
-        iframe: "/v1/sys/asynqmon/"
-        is_preserved: true
-        title: "dev.jobs"
-        requirement:
-          - namespace: "dev.jobs"
-            resource: "*"
-            action: "*"
-      - name: "events-kafka"
-        icon: "ant-design:eye-outlined"
-        path: "/dev/events-kafka"
-        component: "IFRAME"
-        iframe: "/kafka-ui"
-        is_preserved: true
-        title: "dev.events.kafka"
-        requirement:
-          - namespace: "dev.events.kafka"
-            resource: "*"
-            action: "*"
-  - name: "saas"
-    path: "/saas"
-    component: "LAYOUT"
-    redirect: "/saas/tenants"
-    title: "saas.title"
-    icon: "ion:grid-outline"
-    meta:
-    priority: 101
-    is_preserved: true
-    requirement:
-      - namespace: "saas.tenant"
-        resource: "*"
-        action: "read"
-    children:
-      - name: "tenant"
-        path: "/saas/tenants"
-        component: "/saas/tenant/index"
-        is_preserved: true
-        meta:
-        title: "saas.tenant.management"
-        requirement:
-          - namespace: "saas.tenant"
-            resource: "*"
-            action: "read"
   - name: "sys"
     path: "/sys"
     component: "LAYOUT"
     is_preserved: true
     redirect: '/sys/users'
     title: "sys.title"
-    icon: "ion:grid-outline"
+    icon: "BarsOutlined"
     priority: 100
-    meta:
     children:
       - name: "user"
         path: '/sys/users'
+        icon: "User"
         is_preserved: true
         component: "/sys/user/index"
-        meta:
         title: "sys.user.management"
         requirement:
           - namespace: "user.user"
@@ -102,6 +20,7 @@ menus:
             action: "read"
       - name: "role"
         path: "/sys/roles"
+        icon: "TeamOutlined"
         is_preserved: true
         component: "/sys/role/index"
         meta:
@@ -114,9 +33,90 @@ menus:
         path: "/sys/menus"
         is_preserved: true
         component: "/system/menu/index"
-        meta:
+        icon: "MenuOutlined"
         title: "sys.menu.management"
         requirement:
           - namespace: "sys.menu"
             resource: "*"
             action: "read"
+  - name: "saas"
+    path: "/saas"
+    component: "LAYOUT"
+    redirect: "/saas/tenants"
+    title: "saas.title"
+    icon: "ShopOutlined"
+    priority: 101
+    is_preserved: true
+    requirement:
+      - namespace: "saas.tenant"
+        resource: "*"
+        action: "read"
+    children:
+      - name: "tenant"
+        path: "/saas/tenants"
+        component: "/saas/tenant/index"
+        is_preserved: true
+        title: "saas.tenant.management"
+        requirement:
+          - namespace: "saas.tenant"
+            resource: "*"
+            action: "read"
+  - name: "dev"
+    path: "/dev"
+    component: "LAYOUT"
+    redirect: "/dev/jaeger"
+    title: "dev.title"
+    icon: "ToolOutlined"
+    meta:
+    priority: 1000
+    requirement:
+      - namespace: "dev"
+        resource: "*"
+        action: "*"
+    children:
+      - name: "docs"
+        icon: "ApiOutlined"
+        path: "/dev/docs"
+        component: "IFRAME"
+        iframe: "/swagger"
+        title: "dev.docs"
+        is_preserved: true
+        requirement:
+          - namespace: "dev.docs"
+            resource: "*"
+            action: "*"
+      - name: "tracing"
+        icon: "ApiOutlined"
+        path: "/dev/jaeger"
+        component: "IFRAME"
+        is_preserved: true
+        iframe: "/jaeger"
+        title: "dev.jaeger"
+        requirement:
+          - namespace: "dev.jaeger"
+            resource: "*"
+            action: "*"
+      - name: "jobs"
+        icon: "CloudSyncOutlined"
+        path: "/dev/jobs"
+        component: "IFRAME"
+        iframe: "/v1/sys/asynqmon/"
+        is_preserved: true
+        title: "dev.jobs"
+        requirement:
+          - namespace: "dev.jobs"
+            resource: "*"
+            action: "*"
+      - name: "events-kafka"
+        icon: "CloudServerOutlined"
+        path: "/dev/events-kafka"
+        component: "IFRAME"
+        iframe: "/kafka-ui"
+        is_preserved: true
+        title: "dev.events.kafka"
+        requirement:
+          - namespace: "dev.events.kafka"
+            resource: "*"
+            action: "*"
+
+
