--- a/docker-compose.monolithic.yml
+++ b/docker-compose.monolithic.yml
@@ -21,5 +21,5 @@ services:
       #override service config
       - ./quickstart/monolithic:/data/conf.override
       - ./quickstart/.assets:/app/.assets
-    restart: on-failure
+    restart: unless-stopped
     command: ["./monolithic", "-conf", "/data/conf", "-conf", "/data/conf.override","-seed.menu.path","/data/conf/seed/sys.yaml"]
