feat: init oidc api

--- a/docker-compose.hydra.yml
+++ b/docker-compose.hydra.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
 
   hydra:
-    image: oryd/hydra:v1.11.7
+    image: oryd/hydra:v1.11.8
     ports:
       - "4444:4444" # Public port
       - "4445:4445" # Admin port
@@ -13,15 +13,15 @@ services:
       - ./quickstart/configs/hydra:/etc/config/hydra
 
     environment:
-      - DSN=mysql://root:youShouldChangeThis@tcp(mysqld:3306)/mysql?max_conns=20&max_idle_conns=4
+      - DSN=mysql://root:youShouldChangeThis@tcp(mysqld:3306)/hydra?max_conns=20&max_idle_conns=4
     restart: unless-stopped
     depends_on:
       - hydra-migrate
 
   hydra-migrate:
-    image: oryd/hydra:v1.11.7
+    image: oryd/hydra:v1.11.8
     environment:
-      - DSN=mysql://root:youShouldChangeThis@tcp(mysqld:3306)/mysql?max_conns=20&max_idle_conns=4
+      - DSN=mysql://root:youShouldChangeThis@tcp(mysqld:3306)/hydra?max_conns=20&max_idle_conns=4
     command:
       migrate -c /etc/config/hydra/hydra.yml sql -e --yes
     volumes:
