--- a/docker-compose.hydra.yml
+++ b/docker-compose.hydra.yml
@@ -13,7 +13,7 @@ services:
       - ./quickstart/configs/hydra:/etc/config/hydra
 
     environment:
-      - DSN=mysql://root:youShouldChangeThis@tcp(mysqld:3306)/hydra?max_conns=20&max_idle_conns=4
+      - DSN=mysql://root:youShouldChangeThis@tcp(mysqld:3306)/kit?max_conns=20&max_idle_conns=4
     restart: unless-stopped
     depends_on:
       - hydra-migrate
@@ -21,11 +21,11 @@ services:
   hydra-migrate:
     image: oryd/hydra:v1.11.8
     environment:
-      - DSN=mysql://root:youShouldChangeThis@tcp(mysqld:3306)/hydra?max_conns=20&max_idle_conns=4
+      - DSN=mysql://root:youShouldChangeThis@tcp(mysqld:3306)/kit?max_conns=20&max_idle_conns=4
     command:
       migrate -c /etc/config/hydra/hydra.yml sql -e --yes
     volumes:
       - ./quickstart/configs/hydra:/etc/config/hydra
-    restart: unless-stopped
+    restart: on-failure
     depends_on:
       - mysqld
