--- a/quickstart/monolithic/config.override.yaml
+++ b/quickstart/monolithic/config.override.yaml
@@ -26,6 +26,11 @@ sys:
           "kafka-ui:8080": 1
         type: roundrobin
 
+      hydra-public:
+        nodes:
+          "hydra:4444": 1
+        type: roundrobin
+
     global_rules:
       opentelemetry:
         plugins:
@@ -43,6 +48,10 @@ sys:
           cors:
             allow_origins: "*"
     routes:
+      hydra-public:
+        uris: [ "/.well-known/jwks.json","/.well-known/openid-configuration","/oauth2/*","/userinfo" ]
+        upstream_id: hydra-public
+        priority: 100
       api-docs:
         uri: /swagger*
         upstream_id: api-docs
