--- a/quickstart/configs/sys.yaml
+++ b/quickstart/configs/sys.yaml
@@ -33,12 +33,7 @@ sys:
           opentelemetry:
             sampler:
               name: always_on
-      kit_authn:
-        plugins:
-          ext-plugin-pre-req:
-            conf:
-              - name: "kit_authn"
-                value: "{}"
+
       cors:
         plugins:
           cors:
@@ -48,14 +43,19 @@ sys:
         uris: [ "/.well-known/jwks.json","/.well-known/openid-configuration","/oauth2/*","/userinfo" ]
         upstream_id: hydra-public
         priority: 100
-      api-docs:
-        uri: /swagger*
-        upstream_id: api-docs
+
+      kit_authn:
+        priority: 90 #lower then hydra-public
+        uri: /*
         plugins:
           ext-plugin-pre-req:
             conf:
-              - name: "kit_authz"
-                value: "{\"requirement\":[{\"namespace\":\"dev.docs\",\"resource\":\"*\",\"action\":\"*\"}]}"
+              - name: "kit_authn"
+                value: "{}"
+      api-docs:
+        uri: /swagger*
+        upstream_id: api-docs
+
       jaeger:
         uri: /jaeger*
         upstream_id: jaeger
