--- a/quickstart/monolithic/config.override.yaml
+++ b/quickstart/monolithic/config.override.yaml
@@ -37,12 +37,6 @@ sys:
           opentelemetry:
             sampler:
               name: always_on
-      kit_authn:
-        plugins:
-          ext-plugin-pre-req:
-            conf:
-              - name: "kit_authn"
-                value: "{}"
       cors:
         plugins:
           cors:
@@ -52,6 +46,16 @@ sys:
         uris: [ "/.well-known/jwks.json","/.well-known/openid-configuration","/oauth2/*","/userinfo" ]
         upstream_id: hydra-public
         priority: 100
+
+      kit_authn:
+        priority: 90 #lower then hydra-public
+        uri: /*
+        plugins:
+          ext-plugin-pre-req:
+            conf:
+              - name: "kit_authn"
+                value: "{}"
+
       api-docs:
         uri: /swagger*
         upstream_id: api-docs
