--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -17,9 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Publish to demo server
-        if: |
-          github.event_name == 'push'
-          && github.repository == 'go-saas/kit'
+        if: github.repository == 'go-saas/kit'
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
