--- a/quickstart/monolithic/config.override.yaml
+++ b/quickstart/monolithic/config.override.yaml
@@ -83,6 +83,10 @@ sys:
             headers:
               X-Frame-Options: ""
 
+      realtime-api:
+        uris: ["/v1/realtime/*","/assets/realtime/*"]
+        upstream_id: monolithic-http
+
       saas-api:
         uris: ["/v1/saas/*","/assets/saas/*"]
         upstream_id: monolithic-http
