--- a/quickstart/configs/sys.yaml
+++ b/quickstart/configs/sys.yaml
@@ -76,6 +76,7 @@ sys:
       realtime-api:
         uris: ["/v1/realtime/*","/assets/realtime/*"]
         upstream_id: realtime-http
+        enable_websocket: true
 
       saas-api:
         uris: ["/v1/saas/*","/assets/saas/*"]
