feat: refactor email

--- a/quickstart/configs/config.yaml
+++ b/quickstart/configs/config.yaml
@@ -21,9 +21,7 @@ data:
       default:
         addrs: ["redis:6379"]
         password: youShouldChangeThis
-    email:
-      smtp:
-        host: localhost
+    email: {}
     events:
       default:
         topic: kit
