feat: add dtm ui

--- a/quickstart/configs/sys.yaml
+++ b/quickstart/configs/sys.yaml
@@ -22,6 +22,11 @@ sys:
           "kafka-ui:8080": 1
         type: roundrobin
 
+      dtm-ui:
+        nodes:
+          "dtm:36789": 1
+        type: roundrobin
+
       hydra-public:
         nodes:
           "hydra:4444": 1
@@ -72,6 +77,15 @@ sys:
           response-rewrite:
             headers:
               X-Frame-Options: ""
+
+      dtm-ui:
+        uri: /dtm-ui*
+        upstream_id: dtm-ui
+        plugins:
+          ext-plugin-pre-req:
+            conf:
+              - name: "kit_authz"
+                value: "{\"requirement\":[{\"namespace\":\"dev.dtm\",\"resource\":\"*\",\"action\":\"*\"}]}"
 
       realtime-api:
         uris: ["/v1/realtime/*","/assets/realtime/*"]
