--- a/quickstart/configs/dtm/conf.yml
+++ b/quickstart/configs/dtm/conf.yml
@@ -40,7 +40,8 @@
  MicroService: # grpc based microservice config
    Driver: 'dtm-driver-kratos' # name of the driver to handle register/discover
    Target: 'etcd://etcd:2379/dtmservice' # register dtm server to this url
-   EndPoint: 'dtm:36790'
+#   EndPoint: 'grpc://dtm:36790'
+   EndPoint: 'grpc://host.docker.internal:36790'
 
 # HttpMicroService: # http based microservice config
 #   Driver: 'dtm-driver-http' # name of the driver to handle register/discover
