--- a/docker-compose.tracing.yml
+++ b/docker-compose.tracing.yml
@@ -16,12 +16,12 @@ services:
     volumes:
       - ./quickstart/configs/otel/otel-collector-config.yaml:/etc/otel-collector-config.yaml
 
-#    ports:
+    ports:
 #      - "1888"   # pprof extension
 #      - "8888:8888"   # Prometheus metrics exposed by the collector
 #      - "8889:8889"   # Prometheus exporter metrics
 #      - "13133:13133" # health_check extension
-#      - "4317:4317"        # OTLP gRPC receiver
+      - "4317:4317"        # OTLP gRPC receiver
 #      - "4318:4318"   # Add OTLP HTTP Receiver port mapping
 #      - "55670:55679" # zpages extension
 
