--- a/quickstart/monolithic/config.override.yaml
+++ b/quickstart/monolithic/config.override.yaml
@@ -28,7 +28,7 @@ sys:
 
       dtm-ui:
         nodes:
-          "host.docker.internal:36789": 1
+          "dtm:36789": 1
         type: roundrobin
 
       hydra-public:
