--- a/quickstart/configs/dtm/conf.yml
+++ b/quickstart/configs/dtm/conf.yml
@@ -57,7 +57,7 @@
 # RetryInterval: 10 # the subtrans branch will be retried after this interval
 # RequestTimeout: 3 # the timeout of HTTP/gRPC request in dtm
 
-# LogLevel: 'info'              # default: info. can be debug|info|warn|error
+ LogLevel: 'info'              # default: info. can be debug|info|warn|error
 # Log:
 #    Outputs: 'stderr'           # default: stderr, split by ",", you can append files to Outputs if need. example:'stderr,/tmp/test.log'
 #    RotationEnable: 0           # default: 0
@@ -69,4 +69,4 @@
 
 ### advanced options
 # UpdateBranchAsyncGoroutineNum: 1 # num of async goroutine to update branch status
- AdminBasePath: "/dtm-ui"
+# AdminBasePath: "/dtm-ui"
