--- a/quickstart/configs/dtm/conf.yml
+++ b/quickstart/configs/dtm/conf.yml
@@ -69,4 +69,4 @@
 
 ### advanced options
 # UpdateBranchAsyncGoroutineNum: 1 # num of async goroutine to update branch status
-# AdminBasePath: "/dtm-ui"
+ AdminBasePath: "/dtm-ui"
