--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -1,8 +1,8 @@
-name: Publish Dev Server CI
+name: Publish Demo Server CI
 
 on:
   workflow_run:
-    workflows: [ "Docker Image CI", "Docker Image Microservice CI" ]
+    workflows: [ "Docker Image Microservice CI" ]
     types:
       - completed
   workflow_dispatch:
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Publish to demo server
         if: github.repository == 'go-saas/kit'
         uses: appleboy/scp-action@master
@@ -27,6 +28,7 @@ jobs:
           port: ${{ secrets.PORT }}
           source: "quickstart/,.env,docker-compose.yml,docker-compose.tracing.yml,docker-compose.kafka.yml,docker-compose.ms.yml"
           target: "/app/go-saas-kit"
+
       - name: Update demo server
         if: github.repository == 'go-saas/kit'
         uses: appleboy/ssh-action@master
@@ -39,6 +41,7 @@ jobs:
           script: |
             echo "$DOCKER_TAG"
             cd /app/go-saas-kit
+            cp -r quickstart/demo/ quickstart/configs
             sudo docker compose -f docker-compose.yml -f docker-compose.tracing.yml -f docker-compose.kafka.yml -f docker-compose.ms.yml pull
             sudo docker compose -f docker-compose.yml -f docker-compose.tracing.yml -f docker-compose.kafka.yml -f docker-compose.ms.yml up -d --remove-orphans
             sudo docker system prune -f
